[bugfix] Uploaded incorrect version of hooks/user_txt.html

--- a/hooks/user_txt.html
+++ b/hooks/user_txt.html
@@ -1,5 +1,6 @@
 |$/usr/local/bin/php
 <?php
-include('../config.php');
+include('/usr/local/directadmin/plugins/r1soft/config.php');
 ?>
-<a href="<?php echo $server_url; ?>" target="_blank">Serverbackup</a>
+<a href="<?php echo $server_url; ?>" target="_blank">R1soft serverbackup</a>
+DONE|
